# Python-DSA

./: README.md  main.py  pyproject.toml
Cap.02/: cap02.ipynb  cap1.ipynb
Cap.03/: cap03.ipynb
Cap.04/: cap04_1.ipynb  cap04_2.ipynb  cap04_3.ipynb  cap04_4.ipynb  cap04_5.ipynb  cap04_6.ipynb
Cap.04/lista de exercicios/: DSA-Python-Cap04-Exercicios-Solucao.ipynb  DSA-Python-Cap04-Exercicios.ipynb
Cap.05/: cap05-01.ipynb  cap05_02.ipynb  cap05_03.ipynb  cap05_04.ipynb  cap05_05.ipynb  cap05_06.ipynb  cap05_07.ipynb  cap05_08.ipynb  cap05_lab2.ipynb
Cap.05/41-Cap05/Notebooks/: DSA-Python-Cap05-Exercicios-Funcoes.ipynb
Cap.05/lista de exercicios/Notebooks/: DSA-Python-Cap05-Exercicios-Loops-Condiconais.ipynb
Cap.06/: cap06_01.ipynb
Cap.06/arquivos/: arquivo2.txt  arquivo3.txt
