[project]
name = "python-dsa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "basedosdados>=2.0.2",
    "matplotlib>=3.7.5",
    "pandas>=2.1.4",
    "pycaret>=3.3.2",
    "scikit-learn>=1.4.2",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
